--- a/lug.yaml
+++ b/lug.yaml
@@ -1,4 +1,4 @@
-Title: VIM: The Basic Part
+Title: "VIM: The Basic Part"
 Description: >
     A very command-heavy overview of VIM.
 Date: 2016-08-09
